# Vtyle

./: CMakeLists.txt  README.md  app_win32.rc
Data/: user.ini
Data/themes/: dark.qss  normal.qss
From/: Dialog.cpp  EditWidget.cpp  HelpWidget.cpp  MainWindow.cpp  Syntax.cpp  TabWidget.cpp  main.cpp
Header/: Dialog.h  EditWidget.h  HelpWidget.h  MainWindow.h  Syntax.h  TabWidget.h
Resource/: Theme.qss
Resource/complete/: complete.txt
Resource/language/: ch.ini  en.ini
Resource/syntax/: className.txt  functionName.txt  property.txt  propertyVal.txt
